# python-faiss-grpc-server

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  setup.cfg
.github/workflows/: main.yml
docs/: grpc_specification.md
examples/: client.py  create_index.py  faiss_pb2.py  faiss_pb2_grpc.py
proto/: faiss.proto
python/faiss_grpc/: faiss_server.py  main.py
python/faiss_grpc/proto/: faiss_pb2.py  faiss_pb2_grpc.py
tests/: test_faiss_server.py
