[metadata]
name = faiss-grpc
version = attr: faiss_grpc.__version__.__version__
author = Kanchi Shimono
author_email = dev.kanchi.shimono@gmail.com
description = Faiss gRPC server
long_description = flie: README.md
url = https://github.com/KanchiShimono/python-faiss-grpc-server
license = MIT

[options]
python_requires = >=3.7.5
package_dir =
  = python
packages = find:
install_requires =
  grpcio
  grpcio-tools
  faiss-cpu
  environs

[options.extras_require]
dev =
  mypy
  flake8
  black
  isort
  ipython
  jupyter

test =
  mypy
  flake8
  black
  isort
  pytest
  pytest-datadir
  grpcio-testing

[options.packages.find]
where = python

[flake8]
extend-ignore = E203
max-complexity = 10
exclude = .git,__pycache__,python/faiss_grpc/proto

[isort]
force_grid_wrap = 0
include_trailing_comma = True
multi_line_output = 3
use_parentheses = True
known_first_party = faiss_grpc

[mypy]
namespace_packages = True
show_column_numbers = True
ignore_missing_imports = True
# The fllowing options are enabled by --strict option
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True
